# E2E-Fraud-Detection

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt
app/: main.py  setup_guide.md
app/api/dependencies/: model_loader.py
app/api/endpoints/: __init__.py  health.py  predict.py
app/api/schemas/: __init__.py  predict.py
app/core/: config.py
app/middleware/: logging.py
app/tests/: test_predict.py
app/utils/: helpers.py
docs/: mkdocs.yml
docs/docs/: index.md
fraud_detection/: dataset.py  features.py  plots.py
fraud_detection/modeling/: predict.py  train.py
grafana/provisioning/dashboards/: dashboard.yml  fraud-detection-api.json
grafana/provisioning/datasources/: datasource.yml
models/production/: scaler.joblib  xgb_model.joblib
notebooks/: exploration.ipynb  modelling.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
prometheus/: prometheus.yml
reports/: cv_results_20260104_194109.json
src/: config.py  dataloader.py  get_data.py  preprocessing.py
src/config/: params.yaml
src/modeling/: __init__.py  cross_validation.py  evaluate.py  predict.py  train.py  tune.py
src/utils/: params.py
