[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fraud_detection"
version = "0.0.1"
description = "An End-2-End Fraud Detection Project following standard MLOPs practices and deployment using FastAPI."
authors = [
  { name = "Mahaprasad" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]


[tool.ruff]
line-length = 99
src = ["fraud_detection"]
include = ["pyproject.toml", "fraud_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fraud_detection"]
force-sort-within-sections = true

